--- a/css/agendamento/style.css
+++ b/css/agendamento/style.css
@@ -1,107 +1,107 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Ubuntu', sans-serif;
 }
 
-::selection {
-    color: #B367FF;
-    background: white;
-}
-
-html, body {
+html,body{
     height: 100%;
-    background: linear-gradient(90deg, rgba(76, 2, 150, 1) 0%, rgba(213, 71, 220, 1) 67%, rgba(252, 164, 255, 1) 100%);
+    background: linear-gradient(90deg, rgba(161,76,246,1) 37%,
+     rgba(255,193,247,1) 83%);
 }
 
-.clear {
+.clear{
     clear: both;
 }
 
-section.agendamento .conteudo-full {
+section.agendamento .conteudo-full{
     width: 100%;
     position: absolute;
     height: 100%;
 }
 
-section.agendamento .text-content {
+section.agendamento .text-mobile{
+    display: none;
+}
+
+section.agendamento .text-content{
     width: 50%;
     float: left;
 }
-
-section.agendamento .form-content {
+section.agendamento .form-content{
     width: 50%;
     float: right;
 }
 
-section.agendamento .text-agend {
+section.agendamento .text-agend{
     color: white;
 }
 
-section.agendamento .text-agend h2 {
+section.agendamento .text-agend h2{
     font-size: 40px;
     font-weight: bold;
 }
 
-section.agendamento .text-agend p {
+section.agendamento .text-agend p{
     width: 65%;
     font-size: 30px;
     font-weight: normal;
 }
 
-section.agendamento .text-content .patas {
+section.agendamento .text-content .patas{
     width: 260px;
     height: 200px;
     padding-left: 10px;
 }
 
-section.agendamento .text-content .img-doctor {
-    width: 500px;
+section.agendamento .text-content .img-doctor{
+    width: 450px;
     height: 340px;
     position: absolute;
     bottom: 5px;
-    left: 30px;
+    left: 15px;
 }
 
-section.agendamento .formulario {
+
+section.agendamento .formulario{
     width: 70%;
     background-color: white;
     color: #AB57FF;
     border-radius: 20px;
     padding: 20px;
-    -webkit-box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    -moz-box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    margin: 8% auto 0 auto;
+    -webkit-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    -moz-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    margin: 8%  auto 0 auto;
 }
 
-section.agendamento .formulario form {
+section.agendamento .formulario form{
     width: 90%;
     max-width: 420px;
     margin: 0 auto;
 }
 
-.form-wraper {
+.form-wraper{
     float: left;
     margin-top: 10px;
     padding: 0 10px;
 }
 
-.w100 {
+.w100{
     width: 100%;
 }
 
-.w50 {
+.w50{
     width: 50%;
 }
 
-section.agendamento .form-wraper span {
+section.agendamento .form-wraper span{
     font-size: 18px;
     font-weight: bold;
 }
 
-section.agendamento .form-wraper input[type=text], input[type=time], input[type=date], select {
+section.agendamento .form-wraper input[type=text], input[type=time], input[type=date], select{
     width: 100%;
     height: 50px;
     margin-top: 8px;
@@ -112,30 +112,30 @@ section.agendamento .form-wraper input[type=text], input[type=time], input[type=
     background-color: #AB57FF;
     color: white;
     font-size: 16px;
-    -webkit-box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    -moz-box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
+    -webkit-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    -moz-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);  
     outline-style: none;
 }
 
-section.agendamento .form-wraper input[type=text]:hover, input[type=time]:hover, input[type=date]:hover, select:hover {
-    border: 5px solid white;
+section.agendamento .form-wraper input[type=text]:hover, input[type=time]:hover, input[type=date]:hover, select:hover{
+    border: 5px solid white ;
 }
 
-section.agendamento .form-wraper input[type=text]:focus, input[type=time]:focus, input[type=date]:focus, select:focus {
-    border: 5px solid white;
+section.agendamento .form-wraper input[type=text]:focus, input[type=time]:focus, input[type=date]:focus, select:focus{
+    border: 5px solid white ;
 }
 
-section.agendamento ::placeholder {
+section.agendamento ::placeholder{
     color: white;
     font-size: 16px;
 }
 
-section.agendamento select {
+section.agendamento select{
     cursor: pointer;
 }
 
-section.agendamento .form-wraper textarea {
+section.agendamento .form-wraper textarea{
     position: relative;
     left: -8%;
     width: 115%;
@@ -146,31 +146,31 @@ section.agendamento .form-wraper textarea {
     border: none;
     background-color: #AB57FF;
     border-radius: 35px;
-    -webkit-box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    -moz-box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
+    -webkit-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    -moz-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
     font-size: 16px;
     color: white;
     outline-style: none;
 }
 
-section.agendamento input[type=time], input[type=date], input[type=time], input[type=time] {
-    cursor: text;
+section.agendamento input[type=time],input[type=date],input[type=time],input[type=time]{
+    cursor: text ; 
 }
 
-/* Se for mozilla*/
 
-input[type=date] {
+/* Se for mozilla*/
+input[type=date]{
     -webkit-appearance: none;
     -moz-appearance: none;
     background-image: url(../../images/Vector.png);
     background-repeat: no-repeat;
     background-position-x: 90%;
     background-position-y: 50%;
-    cursor: pointer;
+    cursor: text;
 }
 
-input[type=time] {
+input[type=time]{
     -webkit-appearance: none;
     -moz-appearance: none;
     background-image: url(../../images/clock.png);
@@ -186,7 +186,6 @@ input[type="time"]::-moz-clear-button {
 }
 
 /*   Se for Chrome ou Safari*/
-
 input[type="date"]::-webkit-calendar-picker-indicator {
     color: rgba(0, 0, 0, 0);
     opacity: 1;
@@ -212,14 +211,14 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     left: -8px;
     cursor: pointer;
     -webkit-appearance: none;
-    -moz-appearance: none;
-    /* Firefox */
+    -moz-appearance:none; /* Firefox */
 }
 
-section.agendamento .form-wraper select {
+
+
+section.agendamento .form-wraper select{
     -webkit-appearance: none;
-    -moz-appearance: none;
-    /* Firefox */
+    -moz-appearance:none; /* Firefox */
     appearance: none;
     background-image: url(../../images/setaSelect.png);
     background-repeat: no-repeat;
@@ -227,58 +226,406 @@ section.agendamento .form-wraper select {
     background-position-y: 50%;
 }
 
-section.agendamento textarea:hover {
+section.agendamento textarea:hover{
     border: 5px solid white;
     font-size: 17px;
 }
 
-section.agendamento textarea:focus {
+section.agendamento textarea:focus{
     border: 5px solid white;
 }
 
-section.agendamento textarea::placeholder {
+section.agendamento textarea::placeholder{
     font-size: 17px;
     padding: 35px 15px 15px 25px;
     color: white;
 }
 
-section.agendamento textarea::-moz-placeholder, input[type=text]::-moz-placeholder {
-    color: white;
+
+section.agendamento textarea::-moz-placeholder, input[type=text]::-moz-placeholder { 
+    color:white;
     opacity: 1;
 }
 
-.form-wraper input[type=submit] {
+.form-wraper input[type=submit]{
     width: 130px;
     height: 40px;
     border-radius: 25px;
+    font-size: 18px;
     border: none;
     color: white;
-    background-color: #B367FF;
+    background-color: #6f04d9;
     cursor: pointer;
-    -webkit-box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    -moz-box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
-    box-shadow: 3px 5px 14px 0px rgba(0, 0, 0, 0.51);
+    -webkit-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    -moz-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
+    box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
     margin-top: 20px;
     outline-style: none;
 }
 
-.form-wraper input[type=submit]:hover {
+
+.form-wraper input[type=submit]:hover{
     background-color: #B367FF;
-    box-shadow: 0px 4px 20px white;
 }
 
-section.agendamento .logo-agendamento {
+
+section.agendamento .logo-agendamento{
     left: 95%;
     position: absolute;
     bottom: 10px;
 }
 
-section.agendamento .voltar a {
+section.agendamento .voltar a{
     position: relative;
     top: 8px;
     text-decoration: none;
 }
 
-section.agendamento .voltar a:hover {
+section.agendamento .voltar a:hover{
     color: #B367FF;
+}
+
+
+
+/* Iniciando responsivo aqui */
+
+@media screen and (max-width:1280px){
+
+    
+    section.agendamento .text-content{
+        width: 40%;
+    }
+    section.agendamento .form-content{
+        width: 60%;
+    }
+
+    section.agendamento .text-agend{
+        position: relative;
+        left: 50px;
+    }
+}
+
+@media screen and (max-width: 1050px){
+    section.agendamento .text-content{
+        width: 30%;
+    }
+    section.agendamento .form-content{
+        width: 70%;
+    }
+
+    section.agendamento .text-agend{
+        position: relative;
+        left: 70px;
+    }
+
+    section.agendamento .text-agend h2{
+        font-size: 35px;
+        font-weight: bold;
+    }
+    
+    section.agendamento .text-agend p{
+        width: 70%;
+        font-size: 30px;
+        font-weight: normal;
+        margin-top: 20px;
+    }
+
+    section.agendamento .text-content .img-doctor{
+        width: 380px;
+        height: 300px;
+        position: absolute;
+    }
+
+    section.agendamento .text-content .patas{
+        width: 200px;
+        height: 150px;
+    }
+
+    section.agendamento .formulario{
+        width: 60%;
+    }
+    
+    section.agendamento .form-wraper input[type=text], input[type=time], input[type=date], select,textarea{
+        font-size: 15px;
+    }
+
+    .form-wraper input[type=submit]{
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    section.agendamento .text-content .patas{
+        display: none;
+    }
+
+    section.agendamento .text-mobile{
+        color: white;
+        text-align: center;
+        padding: 20px 5%;
+    }
+
+    section.agendamento .text-mobile{
+        display: block;
+    }
+    
+    section.agendamento .text-mobile h2{
+        font-size: 35px;
+        font-weight: bold;
+    }
+    
+    section.agendamento .text-mobile p{
+        font-size: 26px;
+        font-weight: normal;
+        margin-top: 10px;
+    }
+
+    section.agendamento .text-content{
+        display: none;        
+    }
+    section.agendamento .form-content{
+        width: 100%;
+    }
+
+    section.agendamento .text-content .img-doctor{
+        display: none;
+    }
+
+    section.agendamento .formulario{
+        width: 70%;
+        padding: 10px;
+        margin: 30px auto 0px auto;
+    }
+    
+    section.agendamento .formulario form{
+        width: 90%;
+        max-width: 420px;
+        margin: 0 auto;
+    }
+    
+    section.agendamento .logo-agendamento{
+        left: 90%; 
+    }
+}
+
+@media screen and (max-width: 800px){
+
+    section.agendamento .formulario{
+        width: 80%;       
+        margin: 3%  auto 0 auto;
+    }
+
+
+    section.agendamento .logo-agendamento{
+        left: 92%; 
+    }
+}
+
+@media screen and (max-width: 790px){
+   
+    section.agendamento .text-mobile{
+        width:80%;
+     }
+
+     section.agendamento .formulario{
+        width: 90%;
+        margin: 8px auto 0px auto;
+    }
+   
+    section.agendamento .logo-agendamento{
+        position: absolute;
+        bottom: 83%;
+        left: 90%;
+    }
+
+    html,body{
+        height: 100%;
+        background: linear-gradient(180deg, rgba(161,76,246,1) 37%,
+         rgba(255,193,247,1) 83%);
+    }
+
+}
+
+@media screen and (max-width: 768px){
+
+    
+    section.agendamento .text-mobile h2{
+        font-size: 25px;
+    }
+    
+    section.agendamento .text-mobile p{
+        font-size: 18px;
+       
+    }
+
+    section.agendamento .formulario{
+        width: 90%;
+        margin: 12px auto 0px auto;
+    }
+
+
+    section.agendamento .form-wraper input[type=text], input[type=time], input[type=date], select{
+        height: 45px;
+        line-height: 45px;
+    }
+
+    section.agendamento .form-wraper span{
+        font-size: 16px;
+    }
+    
+    section.agendamento .form-wraper input[type=text], input[type=time], input[type=date], select{
+        height: 40px;
+        margin-top: 5px;
+        line-height: 40px;
+        border-radius: 30px;
+        font-size: 15px;
+    }
+    
+    .w50{
+        width: 100%;
+    }
+    section.agendamento .form-wraper textarea{
+        width: 115%;
+        padding: 12px;
+        margin-top: 10px;
+        height: 100px;
+    }
+
+    section.agendamento .form-wraper textarea::placeholder{
+       padding: 25px;
+    }
+
+    .form-wraper input[type=submit]{
+        font-size: 17px;
+        margin-top: 10px;
+        outline-style: none;
+    }
+
+    section.agendamento .logo-agendamento{
+        position: absolute;
+        bottom: 85%;
+        left: 82%;
+    }
+}
+
+@media screen and (max-width: 667px){
+
+    section.agendamento .text-mobile h2{
+        font-size: 20px;
+    }
+    
+    section.agendamento .text-mobile p{
+        font-size: 17px;
+       
+    }
+
+    section.agendamento .formulario{
+        width: 90%;
+        margin: 8px auto 0px auto;
+    }
+
+    section.agendamento .form-wraper span{
+        font-size: 15px;
+    }
+    
+    section.agendamento .form-wraper input[type=text], input[type=time], input[type=date], select{
+        height: 40px;
+        margin-top: 5px;
+        line-height: 40px;
+        border-radius: 30px;
+        font-size: 15px;
+    }
+
+    section.agendamento .form-wraper textarea::placeholder{
+       padding: 15px;
+    }
+}
+
+@media screen and (max-width: 520px){
+    section.agendamento .text-mobile h2{
+        font-size: 19px;
+    }
+    
+    section.agendamento .text-mobile p{
+        font-size: 16px;
+       
+    }
+
+    section.agendamento .form-wraper span{
+        font-size: 14px;
+    }
+
+    section.agendamento .formulario{
+        width: 90%;
+        margin: 3px auto 0px auto;
+    }
+
+    section.agendamento .form-wraper input[type=text], input[type=time], input[type=date], select{
+        height: 35px;
+        line-height: 35px;
+    }
+}
+
+@media screen and (max-width: 375px){
+    section.agendamento .text-mobile{
+        padding: 10px 5%;
+    }
+
+    section.agendamento .text-mobile h2{
+        display: none;
+    }
+    
+    section.agendamento .text-mobile p{
+        font-size: 16px;
+       
+    }
+
+    section.agendamento .text-mobile span{
+       font-weight: bold;
+    }
+
+    section.agendamento .logo-agendamento{
+        position: absolute;
+        bottom: 84%;
+    }
+
+    .form-wraper{
+        margin-top: 3px;
+    }
+
+    section.agendamento .form-wraper input[type=text], input[type=time], input[type=date], select{
+        font-size: 14px;
+    }
+
+    section.agendamento .form-wraper textarea{
+        padding: 10px;
+        margin-top: 3px;
+        height: 80px;
+        font-size: 14px;
+    }
+
+    section.agendamento .form-wraper textarea::placeholder{
+       padding: 18px;
+       font-size: 14px;
+    }
+
+    section.agendamento ::placeholder{
+        font-size: 14px;
+    }
+
+    section.agendamento .formulario{ 
+        padding: 5px;
+    }
+    .form-wraper input[type=submit]{
+        width: 100px;
+        font-size: 16px;
+        margin-top: 5px;
+        float: right;
+    }
+
+    section.agendamento .voltar a{
+        position: relative;
+        top: -30px;
+        float: left;
+    }
 }
